2003-06-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/object-properties.c (sp_object_properties_dialog_destroy): Disconnect
	signals here, fixes crash

2003-06-18  Masatake YAMATO  <jet@gyve.org>

	* src/toolbox.c (sp_toolbox_*_create): passed tt to 
	sp_toolbox_new.

	* src/dialogs/align.c (sp_align_add_button): passed a 
	GtkTooltips object to sp_button_new_from_data.
	(sp_quick_align_dialog): created a new GtkTooltips object
	and passed it to sp_align_add_button.

	* src/widgets/sp-toolbox.c (sp_toolbox_new): passed a
	GtkTooltips object to sp_button_new_from_data.
	Fix a spelling miss.

	* src/widgets/sp-toolbox.h (sp_toolbox_new): passed a 
	GtkTooltips object.

2003-06-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-image.c (sp_image_set): Fix potential crash
	(sp_image_update): Move code here, so canvas items do not dereference
	destroyed pixbuf data

	* src/seltrans.c (sp_sel_trans_handle_request): Reverse shift behaviour for
	rotation (thanks to Pat)

2003-06-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/verbs.c: Added 'print direct' option

	* src/interface.c (sp_ui_file_menu): Added print direct if needed

	* src/toolbox.c (sp_toolbox_file_create): Compose print + print direct if needed

2003-06-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/modules/ps.c (sp_module_print_plain_setup): Added bitmap/ps choice and
	preferred bitmap resolution selector
	(sp_module_print_plain_finish): If user prefers bitmap printing, composite
	full page from NRArena here

2003-06-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/event-context.c (sp_event_context_private_root_handler): Removed
	desktop dialog double-click binding

	* src/widgets/icon.c (sp_icon_new_scaled): New method
	(sp_icon_new_full): Refactored static method
	(sp_icon_image_load_svg): Use scale factor

	* src/xml/repr-io.c (sp_repr_do_read): Unref node after attaching
	(sp_repr_svg_read_node): Ditto

	* src/xml/repr.c (sp_repr_document_new): Ditto
