@@ -1,3 +1,9 @@
+2003-06-19  Masatake YAMATO  <jet@gyve.org>
+
+	* src/dialogs/desktop-properties.c (sp_color_picker_clicked): Enable "Close"
+	button.
+	(sp_color_picker_window_close): New functio.
+
 2003-06-18  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/dialogs/object-properties.c (sp_object_properties_dialog_destroy): Disconnect
